# simquil

./: .gitignore  Cargo.toml  README.md  package.json  prepare_release.sh
.github/: FUNDING.yml
.github/workflows/: msrv.yml  release.yml
data/: bell.quil  x.quil
src/: gates.rs  lib.rs  main.rs  matrix.rs  vm.rs  wavefunction.rs
src/gates/: dot.rs  mod.rs  standard.rs
src/matrix/: mod.rs
src/vm/: errors.rs  mod.rs
