[package]
name = "simquil"
version = "0.2.0"
authors = ["Mark Skilbeck <mark.skilbeck@rigetti.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
quil = { git = "https://github.com/rigetti/quil-rust.git", branch = "derive-error-for-evaluation-error" }
num = "0.4.0"
ndarray = "0.15.3"
num-complex = "0.4.0"
rand = "0.8.4"
lazy_static = "1.4.0"
num-traits = "0.2.14"
itertools = "0.10.1"
log = "*"
env_logger = "*"
thiserror = "1.0.24"
anyhow = "1.0.39"

[dev-dependencies]
pretty_assertions = "0.7.2"