[package]
name = "simquil"
version = "0.4.2"
authors = ["Mark Skilbeck <mark.skilbeck@rigetti.com>"]
edition = "2018"

[[bin]]
name = "simquil"
path = "src/main.rs"

[lib]
name = "simquil"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
structopt = "0.3.13"
quil = { git = "https://github.com/rigetti/quil-rust.git", tag = "v0.5.0" }
num = "0.4.0"
ndarray = "0.15.3"
num-complex = "0.4.0"
rand = "0.8.4"
lazy_static = "1.4.0"
num-traits = "0.2.14"
itertools = "0.10.1"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.24"
anyhow = "1.0.39"
pyo3 = { version = "0.14.1", features = ["extension-module"] }

[dev-dependencies]
pretty_assertions = "0.7.2"